# 2026_SPRING-Fincoach

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  render.yaml
.claude/: settings.json
.claude/agents/: cto-bot.md  fincoach-bot.md
.claude/commands/: sync-main.md  wrap-day.md
.claude/skills/: ask-cto.md  ask.md  cto-review.md  review.md  safe-pr.md  start-day.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  deploy-app.yml  deploy-web.yml
api/: __init__.py  auth.py  chat.py  health.py  main.py  market.py  portfolio.py  ratelimit.py
coach_chat/: CLAUDE.md  __init__.py  context_builder.py  main.py
docs/: ARCHITECTURE.md  CTO_OPERATIONS.md  DEPLOY.md  FAQ.md  GIT_WORKFLOW.md  INTERFACES.md  PR_REVIEW_PLAYBOOK.md  REAL_SERVICE.md  SETUP.md  TEAM_KICKOFF.md  WEEK_1_TASKS.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-module-boundaries.md  0003-data-contracts-with-pydantic.md  0004-branch-protection-and-squash-merge.md  0005-claude-as-pair-with-claude-md.md  0006-no-buy-sell-recommendations.md  0007-pykrx-for-korean-stocks.md  0008-coach-chat-frontend.md  0009-api-integration-layer.md  0010-deployment-strategy.md  0011-user-accounts-and-personalization.md  0012-live-prices-and-full-stock-catalog.md  0013-cto-fixes-market-and-glossary.md  README.md  TEMPLATE.md
docs/meetings/: 2026-04-02-week5.md  2026-05-07-week7.md  2026-05-14-week8.md
docs/onboarding/: eunseo.md  hyuntae.md  subin.md
docs/team-instructions/: README.md  eunseo.md  hyuntae.md  subin.md
market_intelligence/: CLAUDE.md  __init__.py  _fetch_kr.py  _fetch_news.py  _fetch_us.py  engine.py
portfolio_analyzer/: CLAUDE.md  __init__.py  analyzer.py  calculator.py  price_fetcher.py  ticker_matcher.py
scripts/: demo-up.sh  gen_stocks.py  verify_prod.sh
shared/: CLAUDE.md  __init__.py  config.py  disclaimers.py  exceptions.py  mocks.py  models.py
supabase/: schema.sql
supabase/migrations/: 001_conversations.sql  002_replace_holdings_rpc.sql
tests/: conftest.py  smoke_test_llm.py  test_api.py  test_api_health.py  test_api_market.py  test_context_builder.py  test_contracts.py  test_market_intelligence.py  test_portfolio_analyzer.py  test_price_fetcher.py  test_ratelimit.py  test_ticker_matcher.py
web/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  wrangler.toml
web/public/: _redirects  (+1 more)
(+76 files in other folders)
