[project]
name = "fincoach"
version = "0.1.0"
description = "FinCoach - portfolio-aware AI financial coach"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.40",
    "pydantic>=2.9",
    "yfinance>=0.2.40",
    "pykrx>=1.0.45",
    "pandas>=2.2",
    "numpy>=2.0",
    "plotly>=5.24",
    "openai>=1.50",
    "pytrends>=4.9",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "market_intelligence", "portfolio_analyzer", "coach_chat"]
