[project]
name = "fincoach"
version = "0.1.0"
description = "FinCoach - portfolio-aware AI financial coach"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "feedparser>=6.0.12",
    "pandas>=3.0.3",
    "pydantic>=2.9",
    "pykrx>=1.0",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.48.0",
    "yfinance>=1.4.1",
]

# 모듈별 의존성은 본인이 추가. 예:
# market_intelligence: yfinance, pykrx, pytrends, feedparser
# portfolio_analyzer:  yfinance, pykrx, pandas, numpy, plotly, openai
# coach_chat:          anthropic 또는 openai (LLM 클라이언트)
# 통합 시 한곳에 모으거나 모듈별 extras로 분리

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "market_intelligence", "portfolio_analyzer", "coach_chat", "api"]
